--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "APIs for creating, editing and deleting the food receipe",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Pramod Halliyavar",
   "license": "ISC",
